# Cop1220Revised

./: CMakeLists.txt
src/: HomeSalesV3.c  HomesalesV2.c  HurricaneCatCheck.c  HurricaneCatCheckV2.c  Perfection.c  PerfectionV2.c  PigLatin.c  TemperatureComparsion .c  TemperatureComparsion.c  ceasercode.c  homeSalesv4.c  lyrics.c  main.c  twitter.c  unit_tests.c  unit_tests.h
