cmake_minimum_required(VERSION 3.30)
project(Cop1220Revised C)

set(CMAKE_C_STANDARD 11)

add_executable(Cop1220Revised src/main.c
        src/lyrics.c
        src/twitter.c
        src/Perfection.c
        src/HomeSales.c
        src/HomesalesV2.c
        src/PerfectionV2.c
        src/HurricaneCatCheckV2.c
        src/HomeSalesV3.c
        src/codesave.c
        "src/TemperatureComparsion .c"
        src/PigLatin.c
        src/ceasercode.c
        src/forFun.c
        src/homeSalesv4.c
        src/unit_tests.c
        src/unit_tests.h
)
